fix: `Date Range` filter spacing

--- a/assets/src/css/admin.scss
+++ b/assets/src/css/admin.scss
@@ -330,7 +330,7 @@ $media-frame-width: calc(300px + 2 * 24px);
 #media-date-range-filter {
 	display: inline-block;
 	margin: 0 10px 0 0;
-	margin-right: auto;
+	margin-right: 0.5rem;
 	font-size: 14px;
 	line-height: 2;
 	color: #2c3338;
